# cgv-hdp-cr

./: README.md
GrabCut_3D/GrabCut3D/: GrabCut3D.sln
GrabCut_3D/GrabCut3D/GrabCut3D/: GrabCut3D.pj  GrabCut3D.vcxproj  OpenCVDebugX86.props  Source.cpp
cgv-develop/3rd/jpeg/: jconfig.h
cgv-develop/cgv/base/: register.cxx
cgv-develop/cgv/gui/: application.cxx  application.h  event.cxx  event.h  gui_driver.cxx  gui_driver.h  key_event.cxx  key_event.h  provider.cxx  provider.h  trigger.cxx  trigger.h
cgv-develop/cgv/math/: fmat.h  functions.h  fvec.h  quaternion.h  svd.h
cgv-develop/cgv/render/: context.cxx  drawable.cxx  (+7 more)
cgv-develop/doc/: 01_overview.doc
cgv-develop/lib/: cg_ext_d14.exp  cg_ext_d14.lib  cg_fltk_d14.exp  cg_fltk_d14.lib  cg_icons_d14.exp  cg_icons_d14.lib  cg_meta_d14.exp  cg_meta_d14.lib  cg_meta_sd14.lib  cgv_base_d14.exp  cgv_base_d14.lib  cgv_data_d14.exp  cgv_data_d14.lib  cgv_gl_d14.exp  cgv_gl_d14.lib  cgv_gui_d14.exp  cgv_gui_d14.lib  cgv_math_d14.exp  cgv_math_d14.lib  cgv_math_sd14.lib  cgv_media_d14.exp  cgv_media_d14.lib  cgv_os_d14.exp  cgv_os_d14.lib  cgv_os_sd14.lib  cgv_reflect_d14.exp  cgv_reflect_d14.lib  cgv_reflect_sd14.lib  cgv_reflect_types_d14.exp  cgv_reflect_types_d14.lib  cgv_render_d14.exp  cgv_render_d14.lib  cgv_signal_d14.exp  cgv_signal_d14.lib  cgv_signal_sd14.lib  cgv_type_d14.exp  cgv_type_d14.lib  cgv_type_sd14.lib  cgv_utils_d14.exp  cgv_utils_d14.lib  (+59 more)
exavol/libs/vol_data/: CMakeLists.txt  list.h  sliced_volume.cxx  sliced_volume.h  sliced_volume_io.cxx  sliced_volume_io.h  vol_data.pj  volume_io.cxx
(+74 files in other folders)
